# ocudu_aerial_fapi_connector

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md
aerial_bridge/: CMakeLists.txt  DESIGN.md
aerial_bridge/config/: cuphycontroller_loopback.yaml  l2_adapter_config_loopback.yaml  nvipc_secondary.yaml
aerial_bridge/include/aerial_bridge/: aerial_fapi_adaptor.h  aerial_split6_plugin.h  fmt_compat.h  msg_translator.h  nvipc_transport.h  rx_thread.h
aerial_bridge/patches/: cuphy_pti_fix.py  fh_tx_nonfatal_fix.py  gdrcopy_fix.py  gpinned_buffer_fix.py  gpu_comm_standalone_fix.py  mps_single_ctx_fix.py  nic_registration_fix.py  nvipc_host_pinning_fix.py  ocudu_executor_queue_fix.py  standalone_filename_fix.py
aerial_bridge/src/: aerial_fapi_adaptor.cpp  aerial_split6_plugin.cpp  bridge_test.cpp  gdr_stub.cpp  msg_translator.cpp  nvipc_transport.cpp  rx_thread.cpp
ocudu_patches/: slot_point_extender_adaptor.cpp  slot_point_extender_adaptor.h
scripts/: build-inside.sh  characterize_integration.py  check_waveform_assets.py  make_loopback_config.py  run_integration_test.sh  run_validation_suite.sh  run_waveform_validation.sh  start_l1.sh
